--- a/src/elements/drawer-block.html
+++ b/src/elements/drawer-block.html
@@ -9,7 +9,7 @@
 <link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
 
-<link rel="import" href="../behaviors/app-localize-behavior.html">
+<link rel="import" href="../behaviors/localize-behavior.html">
 <link rel="import" href="../styles/shared-styles.html">
 
 
@@ -92,18 +92,8 @@
       Polymer({
         is: 'drawer-block',
         behaviors: [
-          ROE.AppLocalizeBehavior
+          ROE.LocalizeBehavior
         ],
-        properties: {
-          routeData: {
-            type: Object,
-            notify: true
-          },
-          loadExternalResources: {
-            type: Boolean,
-            value: false
-          }
-        },
         closeDrawer: function () {
           ROE.Elements.Template.closeDrawer();
         }
