--- a/src/elements/about-block.html
+++ b/src/elements/about-block.html
@@ -4,10 +4,11 @@
 
 <link rel="import" href="../../bower_components/marked-element/marked-element.html">
 
-<link rel="import" href="../behaviors/app-localize-behavior.html">
+<link rel="import" href="../behaviors/localize-behavior.html">
 
 
 <dom-module id="about-block">
+
   <template>
     <style include="shared-styles">
       :host {
@@ -43,6 +44,7 @@
         }
       }
     </style>
+
     <div class="container">
       <div class="about-item">
         <h4 class="heading">[[localize('about')]]</h4>
@@ -59,14 +61,16 @@
         </marked-element>
       </div>
     </div>
+
   </template>
+
   <script>
     (function () {
       'use strict';
       Polymer({
         is: 'about-block',
         behaviors: [
-          ROE.AppLocalizeBehavior
+          ROE.LocalizeBehavior
         ],
       });
     }());
