--- a/src/elements/footer-block.html
+++ b/src/elements/footer-block.html
@@ -11,7 +11,7 @@
 
 <link rel="import" href="../styles/shared-styles.html">
 <!-- <link rel="import" href="../js-wrappers/g-plusone.html"> -->
-<link rel="import" href="../behaviors/app-localize-behavior.html">
+<link rel="import" href="../behaviors/localize-behavior.html">
 <!-- <link rel="import" href="mailchimp-subscribe.html"> -->
 
 
@@ -29,6 +29,7 @@
         --paper-menu-button: {
           padding: 0;
         };
+        --paper-menu-background-color: #fff;
       }
       .container {
         @apply(--layout-vertical);
@@ -91,6 +92,12 @@
         @apply(--layout-flex);
         margin-right: 10px;
       }
+      .language-icon {
+        margin-right: 4px;
+      }
+      paper-item {
+        cursor: pointer;
+      }
       @media (min-width: 601px) {
         .footer-backtotop {
           margin-bottom: 0;
@@ -149,7 +156,9 @@
             <div class="link-block-title">[[localize('contact-me')]]</div>
             <ul class="link-block">
               <template is="dom-repeat" items="[[app.data.contactBlock.links]]" as="link">
-                <li><a href$="[[link.url]]" target="_getLinkTarget(link.newTab)">[[link.text]]</a></li>
+                <li>
+                  <a href$="[[link.url]]" target="_getLinkTarget(link.newTab)">[[link.text]]</a>
+                </li>
               </template>
             </ul>
             <div class="icons-wrapper align-pb-block">
@@ -174,19 +183,19 @@
           <g:plusone size="medium" width="200" annotation="inline" href$="{{app.data.url}}"></g:plusone>
         </div>
 
-        <!--<paper-menu-button vertical-align="bottom" horizontal-align="left">-->
-          <!--<paper-button class="dropdown-trigger">-->
-            <!--<iron-icon icon="language"></iron-icon>-->
-            <!--[[selectedLanguage.label]]-->
-            <!--<iron-icon icon="arrow-drop-down"></iron-icon>-->
-          <!--</paper-button>-->
-          <!--<paper-menu class="dropdown-content" selected="{{app.lang}}" selected-item="{{selectedLanguage}}"-->
-                      <!--attr-for-selected="value">-->
-            <!--<template is="dom-repeat" items="[[app.data.languages]]" as="lang">-->
-              <!--<paper-item value="[[lang.key]]" label="[[lang.name]]">[[lang.name]]</paper-item>-->
-            <!--</template>-->
-          <!--</paper-menu>-->
-        <!--</paper-menu-button>-->
+        <paper-menu-button vertical-align="bottom" horizontal-align="left">
+          <paper-button class="dropdown-trigger">
+            <iron-icon class="language-icon" icon="language"></iron-icon>
+            [[selectedLanguage.label]]
+            <iron-icon icon="arrow-drop-down"></iron-icon>
+          </paper-button>
+          <paper-menu class="dropdown-content" selected="{{app.lang}}" selected-item="{{selectedLanguage}}"
+                      attr-for-selected="value">
+            <template is="dom-repeat" items="[[app.data.languages]]" as="lang">
+              <paper-item value="[[lang.key]]" label="[[lang.name]]">[[lang.name]]</paper-item>
+            </template>
+          </paper-menu>
+        </paper-menu-button>
       </div>
     </div>
 
@@ -198,13 +207,19 @@
       Polymer({
         is: 'footer-block',
         behaviors: [
-          ROE.AppLocalizeBehavior
+          ROE.LocalizeBehavior
+        ],
+        observers: [
+          'languageChanged(app.lang)'
         ],
         scrollToTop: function (e) {
           ROE.Elements.Template.backToTop(e);
         },
         _getLinkTarget: function (newTab) {
           return newTab ? '_blank' : '';
+        },
+        languageChanged: function (lang) {
+          ROE.Analytics.trackEvent('language', 'select', lang);
         }
       });
     }());
