--- a/src/elements/header-content.html
+++ b/src/elements/header-content.html
@@ -7,7 +7,7 @@
 <link rel="import" href="../../bower_components/neon-animation/neon-animated-pages.html">
 
 <link rel="import" href="../styles/shared-styles.html">
-<link rel="import" href="../behaviors/app-localize-behavior.html">
+<link rel="import" href="../behaviors/localize-behavior.html">
 <link rel="import" href="animatable-content.html">
 
 
@@ -142,13 +142,12 @@
       Polymer({
         is: 'header-content',
         behaviors: [
-          ROE.AppLocalizeBehavior
+          ROE.LocalizeBehavior
         ],
         properties: {
           app: {
             type: Object
-          },
-          routeData: Object
+          }
         },
         _scrollToContact: function () {
           ROE.Analytics.trackEvent('contact', 'contact_click', 'header');
