--- a/src/elements/toolbar-block.html
+++ b/src/elements/toolbar-block.html
@@ -10,7 +10,7 @@
 
 <link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="../behaviors/utils-behavior.html">
-<link rel="import" href="../behaviors/app-localize-behavior.html">
+<link rel="import" href="../behaviors/localize-behavior.html">
 
 
 <dom-module id="toolbar-block">
@@ -62,8 +62,12 @@
       </div>
       <div class="logo-wrapper">
         <a href="/" hidden$="{{hideLogo}}" fade>
-          <!-- <iron-image class="logo" src="/images/logo-white.svg" sizing="contain"
-                      alt="{{localize('title')}}"></iron-image> -->
+          <iron-image
+            class="logo"
+            src="/images/logo-white.svg"
+            sizing="contain"
+            alt="{{localize('title')}}"
+          ></iron-image>
         </a>
       </div>
       <div class="navItem" self-end>
@@ -87,15 +91,12 @@
       Polymer({
         is: 'toolbar-block',
         behaviors: [
-          ROE.AppLocalizeBehavior,
+          ROE.LocalizeBehavior,
           ROE.UtilsBehavior
         ],
         properties: {
-          routeData: Object,
-          hideLogo: Boolean,
-          loadExternalResources: {
-            type: Boolean,
-            value: false
+          hideLogo: {
+            type: Boolean
           }
         },
         observers: [
