--- a/src/pages/blog-list.html
+++ b/src/pages/blog-list.html
@@ -11,6 +11,7 @@
 <link rel="import" href="../../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
 
 <link rel="import" href="../elements/footer-block.html">
+<link rel="import" href="../behaviors/page-behavior.html">
 
 
 <dom-module id="blog-list">
@@ -102,13 +103,12 @@
         is: 'blog-list',
         behaviors: [
           Polymer.NeonAnimationRunnerBehavior,
-          Polymer.NeonSharedElementAnimatableBehavior
+          Polymer.NeonSharedElementAnimatableBehavior,
+          ROE.PageBehavior
         ],
         properties: {
-          app: Object,
-          posts: Array,
-          selected: {
-            type: Boolean
+          posts: {
+            type: Array
           },
           animationConfig: {
             type: Object,
@@ -131,7 +131,7 @@
             }
           }
         },
-        _updateCascadedNodes() {
+        _updateCascadedNodes: function () {
           var cascaded = Polymer.dom(this.root).querySelectorAll('[cascaded]');
           var cascadedArray = Array.prototype.slice.call(cascaded);
           this.animationConfig.entry.push({
