--- a/src/pages/blog-page.html
+++ b/src/pages/blog-page.html
@@ -1,9 +1,12 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
 <link rel="import" href="../../bower_components/app-route/app-route.html">
+<link rel="import" href="../../bower_components/neon-animation/neon-animated-pages.html">
 
+<link rel="import" href="../behaviors/page-behavior.html">
 <link rel="import" href="blog-list.html">
 <link rel="import" href="post-page.html">
+
 
 <dom-module id="blog-page">
 
@@ -44,13 +47,12 @@
       Polymer({
         is: 'blog-page',
         behaviors: [
-          Polymer.NeonAnimatableBehavior
+          Polymer.NeonAnimatableBehavior,
+          ROE.PageBehavior
         ],
         properties: {
-          app: Object,
-          posts: Array,
-          route: {
-            type: Object
+          posts: {
+            type: Array
           },
           animationConfig: {
             type: Object,
