--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -3,34 +3,18 @@
 <link rel="import" href="../../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
 <link rel="import" href="../../bower_components/neon-animation/neon-animation.html">
 
-<!-- <link rel="import" href="../elements/statistics-block.html"> -->
-<!-- <link rel="import" href="../elements/featured-people.html"> -->
-<!-- <link rel="import" href="../elements/featured-videos.html"> -->
-<!-- <link rel="import" href="../elements/call-to-action.html"> -->
+<link rel="import" href="../behaviors/page-behavior.html">
 <link rel="import" href="../elements/about-block.html">
-<!-- <link rel="import" href="../elements/tickets-block.html"> -->
-<!-- <link rel="import" href="../elements/latest-posts.html"> -->
 <link rel="import" href="../elements/footer-block.html">
-<!-- <link rel="import" href="../elements/photo-block.html"> -->
-<!-- <link rel="import" href="../elements/social-feed.html"> -->
-<!-- <link rel="import" href="../elements/logos-block.html"> -->
-<!-- <link rel="import" href="../elements/map-block.html"> -->
+<link rel="import" href="../elements/photo-block.html">
+
 
 <dom-module id="home-page">
 
   <template>
 
-    <!-- <statistics-block app="{{app}}" cascaded></statistics-block> -->
-    <!-- <featured-people app="{{app}}" people="{{people}}" cascaded></featured-people> -->
-    <!-- <featured-videos app="{{app}}" cascaded></featured-videos> -->
-    <!-- <call-to-action app="{{app}}" cascaded></call-to-action> -->
     <about-block app="{{app}}" cascaded></about-block>
-    <!-- <photo-block app="{{app}}" cascaded></photo-block> -->
-    <!-- <tickets-block app="{{app}}" cascaded></tickets-block> -->
-    <!-- <latest-posts app="{{app}}" posts="{{posts}}" cascaded></latest-posts> -->
-    <!-- <social-feed app="{{app}}" cascaded></social-feed> -->
-    <!-- <map-block app="{{app}}" cascaded></map-block> -->
-    <!-- <logos-block app="{{app}}" cascaded></logos-block> -->
+    <photo-block app="{{app}}" cascaded></photo-block>
     <footer-block app="{{app}}" cascaded></footer-block>
 
   </template>
@@ -41,11 +25,13 @@
       Polymer({
         is: 'home-page',
         behaviors: [
-          Polymer.NeonSharedElementAnimatableBehavior
+          Polymer.NeonSharedElementAnimatableBehavior,
+          ROE.PageBehavior
         ],
         properties: {
-          app: Object,
-          posts: Array,
+          posts: {
+            type: Array
+          },
           animationConfig: {
             type: Object,
             value: function () {
