--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -33,6 +33,7 @@
         --web: #2196f3;
         --cloud: #3f51b5;
         --community: #e91e63;
+        --it: #9E9E9E;
         --angular-js: #e0343d;
         --angular-js2: #e0343d;
         --protractor: #e0343d;
@@ -117,6 +118,16 @@
         right: 0;
         bottom: 0;
         left: 0;
+      }
+      [hidden] {
+        display: none !important;
+      }
+      [show] {
+        display: block !important;
+      }
+      body {
+        margin: 0;
+        min-height: 100vh;
       }
       body,
       .markdown-html {
