--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <roe-app id="roeapp"></roe-app>
 
 <script src="scripts/helper/util.js"></script>
-<script src="scripts/analytics.js"></script>
+<script src="scripts/metrics.js"></script>
 <script src="scripts/helper/elements.js"></script>
 <script src="scripts/helper/service-worker-registration.js"></script>
 <script src="scripts/bootstrap.js"></script>
