--- a/src/elements/footer-block.html
+++ b/src/elements/footer-block.html
@@ -10,9 +10,8 @@
 <link rel="import" href="../../bower_components/paper-item/paper-item.html">
 
 <link rel="import" href="../styles/shared-styles.html">
-<!-- <link rel="import" href="../js-wrappers/g-plusone.html"> -->
+<link rel="import" href="../js-wrappers/g-plusone.html">
 <link rel="import" href="../behaviors/localize-behavior.html">
-<!-- <link rel="import" href="mailchimp-subscribe.html"> -->
 
 
 <dom-module id="footer-block">
@@ -163,7 +162,7 @@
             </ul>
             <div class="icons-wrapper align-pb-block">
               <template is="dom-repeat" items="[[app.data.social]]" as="network">
-                <a class="button-link" href$="[[network.url]]" target="_blank">
+                <a class="button-link" href$="[[network.url]]" target="_blank" rel="noopener noreferrer">
                   <paper-icon-button icon="icons:[[network.name]]"></paper-icon-button>
                 </a>
               </template>
@@ -174,28 +173,39 @@
       <div class="footer-content footer-bottom">
         <!-- Please do NOT delete next block -->
         <div class="copyright">
-          &copy; 2016 Based on <a href="https://github.com/gdg-x/hoverboard" target="_blank">Project
-          Hoverboard</a>. Designed and created by <a href="http://o.zasadnyy.com/" target="_blank">Oleh
+          &copy; 2016 Based on <a href="https://github.com/gdg-x/hoverboard" target="_blank" rel="noopener noreferrer">Project
+          Hoverboard</a>. Designed and created by <a href="http://o.zasadnyy.com/" target="_blank" rel="noopener noreferrer">Oleh
           Zasadnyy</a> &middot;
-          <a href="http://lviv.gdg.org.ua" target="_blank">GDG Lviv</a>
+          <a href="http://lviv.gdg.org.ua" target="_blank" rel="noopener noreferrer">GDG Lviv</a>
         </div>
         <div class="gplus">
           <g:plusone size="medium" width="200" annotation="inline" href$="{{app.data.url}}"></g:plusone>
         </div>
 
-        <paper-menu-button vertical-align="bottom" horizontal-align="left">
-          <paper-button class="dropdown-trigger">
-            <iron-icon class="language-icon" icon="language"></iron-icon>
-            [[selectedLanguage.label]]
-            <iron-icon icon="arrow-drop-down"></iron-icon>
-          </paper-button>
-          <paper-menu class="dropdown-content" selected="{{app.lang}}" selected-item="{{selectedLanguage}}"
-                      attr-for-selected="value">
-            <template is="dom-repeat" items="[[app.data.languages]]" as="lang">
-              <paper-item value="[[lang.key]]" label="[[lang.name]]">[[lang.name]]</paper-item>
-            </template>
-          </paper-menu>
-        </paper-menu-button>
+        <template is="dom-if" if="[[_showLanguageToggle(app.data.languages)]]">
+          <paper-menu-button vertical-align="bottom" horizontal-align="left">
+            <paper-button class="dropdown-trigger">
+              <iron-icon class="language-icon" icon="language"></iron-icon>
+              [[selectedLanguage.label]]
+              <iron-icon icon="arrow-drop-down"></iron-icon>
+            </paper-button>
+            <paper-menu
+              class="dropdown-content"
+              selected="{{app.lang}}"
+              selected-item="{{selectedLanguage}}"
+              attr-for-selected="value"
+            >
+              <template is="dom-repeat" items="[[app.data.languages]]" as="lang">
+                <paper-item
+                  value="[[lang.key]]"
+                  label="[[lang.name]]"
+                  on-tap="_changeLanguage"
+                >[[lang.name]]
+                </paper-item>
+              </template>
+            </paper-menu>
+          </paper-menu-button>
+        </template>
       </div>
     </div>
 
@@ -209,17 +219,17 @@
         behaviors: [
           ROE.LocalizeBehavior
         ],
-        observers: [
-          'languageChanged(app.lang)'
-        ],
         scrollToTop: function (e) {
           ROE.Elements.Template.backToTop(e);
+        },
+        _changeLanguage: function (e) {
+          ROE.Analytics.trackEvent('language', 'select', e.target.label);
         },
         _getLinkTarget: function (newTab) {
           return newTab ? '_blank' : '';
         },
-        languageChanged: function (lang) {
-          ROE.Analytics.trackEvent('language', 'select', lang);
+        _showLanguageToggle: function (languages) {
+          return languages && (languages.length > 1);
         }
       });
     }());
