--- a/src/elements/about-block.html
+++ b/src/elements/about-block.html
@@ -4,8 +4,6 @@
 
 <link rel="import" href="../../bower_components/marked-element/marked-element.html">
 
-<link rel="import" href="../behaviors/localize-behavior.html">
-
 
 <dom-module id="about-block">
 
@@ -47,16 +45,16 @@
 
     <div class="container">
       <div class="about-item">
-        <h4 class="heading">[[localize('about')]]</h4>
-        <marked-element markdown="[[localize('about-description')]]">
+        <h4 class="heading">About</h4>
+        <marked-element markdown="Richard Osterloh Engineering Ltd offers Embedded Software development and consultancy. We build custom proprietary systems as well as implement open source technologies">
           <div class="markdown-html"></div>
         </marked-element>
-        <!-- <a class="page-link" href="/team/">[[localize('open-team-page')]]</a> -->
+        <!-- <a class="page-link" href="/team/">Open team page</a> -->
       </div>
       <span class="divider"></span>
       <div class="about-item">
-        <h4 class="heading">[[localize('technology')]]</h4>
-        <marked-element markdown="[[localize('technology-description')]]">
+        <h4 class="heading">Technology</h4>
+        <marked-element markdown="We have experience in developing: <ul><li>Android platform and applicaion</li><li>RTOS and bare metal microcontrollers</li><li>IoT backend systems</li><ul>">
           <div class="markdown-html"></div>
         </marked-element>
       </div>
@@ -67,12 +65,13 @@
   <script>
     (function () {
       'use strict';
+
       Polymer({
-        is: 'about-block',
-        behaviors: [
-          ROE.LocalizeBehavior
-        ],
+
+        is: 'about-block'
+
       });
+      
     }());
   </script>
 </dom-module>
