--- a/src/elements/app-data.html
+++ b/src/elements/app-data.html
@@ -2,42 +2,73 @@
 
 <link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
 
+<link rel="import" href="../../bower_components/polymerfire/polymerfire.html">
+<link rel="import" href="../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html">
 
 <dom-module id="app-data">
   <template>
     <iron-ajax auto url="[[configSource]]" handle-as="json" last-response="{{app.data}}"></iron-ajax>
-    <iron-ajax auto url="[[postsSource]]" handle-as="json" on-response="_reversePosts"></iron-ajax>
+
+    <firebase-query
+      id="queryPosts"
+      app-name="roengineering"
+      path="/blog"
+      data="{{_firebasePosts}}"
+      order-by-key>
+    </firebase-query>
+
+    <app-indexeddb-mirror
+      session="roeng"
+      key="blog"
+      data="{{_firebasePosts}}"
+      persisted-data="{{posts}}">
+    </app-indexeddb-mirror>
+
+    <!-- <firebase-document
+      id="queryConfig"
+      app-name="roengineering"
+      path="/config"
+      data="{{_firebaseConfig}}">
+    </firebase-document>
+
+    <app-indexeddb-mirror
+      session="roeng"
+      key="config"
+      data="{{_firebaseConfig}}"
+      persisted-data="{{app.data}}">
+    </app-indexeddb-mirror> -->
+
   </template>
   <script>
     (function () {
       'use strict';
+
       Polymer({
         is: 'app-data',
-        app: {
-          type: Object,
-          notify: true
-        },
+
         properties: {
+          app: {
+            type: Object,
+            notify: true
+          },
+
           configSource: {
             type: String,
             value: 'data/config.json'
           },
-          postsSource: {
-            type: String,
-            value: 'data/blog.json'
-          },
+
           posts: {
             type: Array,
             notify: true
           }
         },
+
         ready: function () {
           this.app = this.app || {};
-        },
-        _reversePosts: function (response) {
-          this.posts = response.detail.response.reverse();
         }
+
       });
+
     }());
   </script>
 </dom-module>
