--- a/src/elements/drawer-block.html
+++ b/src/elements/drawer-block.html
@@ -9,7 +9,6 @@
 <link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
 
-<link rel="import" href="../behaviors/localize-behavior.html">
 <link rel="import" href="../styles/shared-styles.html">
 
 
@@ -29,7 +28,7 @@
       .logo {
         margin-top: 15px;
         height: 40px;
-        width: 130px;
+        width: 40px;
       }
       .bottom {
         font-size: 14px;
@@ -66,11 +65,11 @@
     <paper-toolbar class="tall">
       <div class="top">
         <iron-image class="logo" src="/images/logo-white.svg" sizing="contain"
-                    alt="[[localize('title')]]"></iron-image>
+                    alt="Richard Osterloh Engineering Ltd."></iron-image>
       </div>
       <div class="bottom">
-        <span class="dates">[[localize('dates')]]</span>
-        <span class="location">{{localize('location-address-short')}}</span>
+        <span class="dates">Dates</span>
+        <span class="location">Location address</span>
       </div>
     </paper-toolbar>
     <nav>
@@ -79,7 +78,7 @@
                   selected="{{pageData.page}}"
                   selected-class="selected">
         <template is="dom-repeat" items="[[app.data.navigation]]" as="nav">
-          <a class="navigation-link" name="[[nav.route]]" href$="[[nav.permalink]]" on-tap="closeDrawer">{{localize(nav.route)}}</a>
+          <a class="navigation-link" name="[[nav.route]]" href$="[[nav.permalink]]" on-tap="closeDrawer">[[nav.route]]/a>
         </template>
       </paper-menu>
     </nav>
@@ -89,15 +88,17 @@
   <script>
     (function () {
       'use strict';
+
       Polymer({
+
         is: 'drawer-block',
-        behaviors: [
-          ROE.LocalizeBehavior
-        ],
+
         closeDrawer: function () {
           ROE.Elements.Template.closeDrawer();
         }
+
       });
+
     }());
   </script>
 
