--- a/src/elements/toolbar-block.html
+++ b/src/elements/toolbar-block.html
@@ -7,10 +7,11 @@
 
 <link rel="import" href="../../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/paper-menu-button/paper-menu-button.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
 <link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="../behaviors/utils-behavior.html">
-<link rel="import" href="../behaviors/localize-behavior.html">
 
 
 <dom-module id="toolbar-block">
@@ -20,6 +21,7 @@
     <style include="shared-styles">
       :host {
         --header-color: #fff;
+        --paper-menu-button-dropdown-background: #fff;
         --paper-tabs: {
           height: 64px;
         };
@@ -29,30 +31,90 @@
         position: relative;
         color: var(--header-color);
       }
+
       .logo-wrapper {
         @apply(--layout-flex);
       }
+
       .logo {
         margin-top: 7px;
         height: 40px;
         width: 130px;
       }
+
       iron-image {
         background-color: transparent;
       }
+
       paper-tabs a {
         color: var(--header-color);
         transition: color .7s
       }
+
       paper-tab {
         flex: none;
         padding: 0 10px;
+        text-transform: uppercase;
       }
+
       .nav-link {
         @apply(--layout-horizontal);
         @apply(--layout-center-center);
         height: 100%;
         text-transform: uppercase;
+      }
+
+      .signin-tab {
+        --paper-tab-content-unselected: {
+          opacity: 1;
+        };
+        height: 64px;
+        font-size: 14px;
+        font-weight: 500;
+      }
+
+      .auth-menu[phoneSize] {
+        padding: 0;
+        transform: translateY(-16px);
+      }
+
+      .profile-image {
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        background-position: center;
+        background-size: cover;
+      }
+
+      .signin-panel {
+        background: #fff;
+        color: var(--text-primary-color);
+      }
+
+      .profile-details {
+        padding: 16px;
+        border-bottom: 1px solid var(--divider-color);
+      }
+
+      .profile-details .profile-image {
+        margin-right: 16px;
+￼        width: 48px;
+￼        height: 48px;
+      }
+
+      .profile-name,
+      .profile-email {
+        font-size: 14px;
+        display: block;
+        color: var(--secondary-text-color);
+      }
+
+      .profile-action {
+        margin-top: 4px;
+        text-transform: uppercase;
+        color: var(--default-primary-color);
+        font-size: 14px;
+        cursor: pointer;
       }
     </style>
 
@@ -66,7 +128,7 @@
             class="logo"
             src="/images/logo-white.svg"
             sizing="contain"
-            alt="{{localize('title')}}"
+            alt="Richard Osterloh Engineering Ltd."
           ></iron-image>
         </a>
       </div>
@@ -75,11 +137,40 @@
           <paper-tabs selected="[[app.page]]" attr-for-selected="name" noink>
             <template is="dom-repeat" items="[[app.data.navigation]]" as="nav">
               <paper-tab name="[[nav.route]]" link>
-                <a href$="[[nav.permalink]]" class="nav-link">{{localize(nav.route)}}</a>
+                <a href$="[[nav.permalink]]" class="nav-link">[[nav.route]]</a>
               </paper-tab>
             </template>
           </paper-tabs>
         </template>
+
+        <paper-tab class="signin-tab" on-tap="signIn" hidden$="[[app.user]]">Sign in</paper-tab>
+
+        <paper-menu-button
+          class="auth-menu"
+          hidden$="[[!app.user]]"
+          vertical-align="top"
+          horizontal-align="right"
+          phoneSize$="[[app.isPhoneSize]]"
+          layout horizontal center-center
+        >
+          <div
+            class="profile-image dropdown-trigger"
+            style="background-image: url('[[app.user.photoURL]]')"
+          ></div>
+          <div class="signin-panel dropdown-content">
+            <div class="profile-details" layout horizontal>
+              <div
+                class="profile-image dropdown-trigger"
+                style="background-image: url('[[app.user.photoURL]]')"
+              ></div>
+              <div layout vertical center-justified>
+                <span class="profile-name">[[app.user.displayName]]</span>
+                <span class="profile-email">[[app.user.email]]</span>
+                <span class="profile-action" role="button" on-tap="signOut">Sign out</span>
+              </div>
+            </div>
+          </div>
+        </paper-menu-button>
       </div>
     </app-toolbar>
 
@@ -88,23 +179,37 @@
   <script>
     (function () {
       'use strict';
+
       Polymer({
+
         is: 'toolbar-block',
+
         behaviors: [
-          ROE.LocalizeBehavior,
           ROE.UtilsBehavior
         ],
+
         properties: {
           hideLogo: {
             type: Boolean
           }
         },
+
         observers: [
           '_stylesChanged(app.headerSettings)'
         ],
+
         togglePanel: function () {
           ROE.Elements.Template.toggleDrawer();
         },
+
+        signIn: function () {
+          ROE.Elements.Template.signIn();
+        },
+
+        signOut: function () {
+          ROE.Elements.Template.signOut();
+        },
+
         _stylesChanged: function (headerSettings) {
           if(headerSettings) {
             this.customStyle['--header-color'] = headerSettings.fontColor;
@@ -112,7 +217,9 @@
             this.updateStyles();
           }
         }
+
       });
+
     }());
   </script>
 
