--- a/src/pages/blog-page.html
+++ b/src/pages/blog-page.html
@@ -4,6 +4,8 @@
 <link rel="import" href="../../bower_components/neon-animation/neon-animated-pages.html">
 
 <link rel="import" href="../behaviors/page-behavior.html">
+<link rel="import" href="../behaviors/cascaded-behavior.html">
+<link rel="import" href="../behaviors/share-behavior.html">
 <link rel="import" href="blog-list.html">
 <link rel="import" href="post-page.html">
 
@@ -44,38 +46,24 @@
   <script>
     (function () {
       'use strict';
+
       Polymer({
+
         is: 'blog-page',
+
         behaviors: [
-          Polymer.NeonAnimatableBehavior,
-          ROE.PageBehavior
+          ROE.PageBehavior,
+          ROE.CascadedBehavior
         ],
+
         properties: {
           posts: {
             type: Array
-          },
-          animationConfig: {
-            type: Object,
-            value: function () {
-              return {
-                'entry': [{
-                  name: 'fade-in-animation',
-                  animation: 'fade-in-animation',
-                  node: this,
-                  timing: {
-                    delay: 500
-                  }
-                }],
-                'exit': [{
-                  name: 'fade-out-animation',
-                  animation: 'fade-out-animation',
-                  node: this
-                }]
-              };
-            }
           }
         }
+
       });
+      
     }());
   </script>
 
