--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -1,8 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
-<link rel="import" href="../../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
-<link rel="import" href="../../bower_components/neon-animation/neon-animation.html">
-
+<link rel="import" href="../behaviors/cascaded-behavior.html">
 <link rel="import" href="../behaviors/page-behavior.html">
 <link rel="import" href="../elements/about-block.html">
 <link rel="import" href="../elements/footer-block.html">
@@ -22,53 +20,28 @@
   <script>
     (function () {
       'use strict';
+
       Polymer({
+
         is: 'home-page',
+
         behaviors: [
-          Polymer.NeonSharedElementAnimatableBehavior,
-          ROE.PageBehavior
+          ROE.PageBehavior,
+          ROE.CascadedBehavior
         ],
+
         properties: {
           posts: {
             type: Array
-          },
-          animationConfig: {
-            type: Object,
-            value: function () {
-              var cascaded = Polymer.dom(this.root).querySelectorAll('[cascaded]');
-              var cascadedArray = Array.prototype.slice.call(cascaded);
-              return {
-                'entry': [{
-                  name: 'cascaded-animation',
-                  animation: 'transform-animation',
-                  transformFrom: 'translate3d(0, 100%, 0)',
-                  nodes: cascadedArray,
-                  timing: {
-                    delay: 500
-                  }
-                }, {
-                  name: 'fade-in-animation',
-                  animation: 'fade-in-animation',
-                  node: this,
-                  timing: {
-                    delay: 500
-                  }
-                }],
-                'exit': [{
-                  name: 'cascaded-animation',
-                  animation: 'transform-animation',
-                  transformTo: 'translate3d(0, 100%, 0)',
-                  nodes: cascadedArray
-                }, {
-                  name: 'fade-out-animation',
-                  animation: 'fade-out-animation',
-                  node: this
-                }]
-              };
-            }
           }
+        },
+
+        ready: function() {
+          this.updateCascadedNodes();
         }
+
       });
+
     }());
   </script>
 
