--- a/src/styles/dialog-styles.html
+++ b/src/styles/dialog-styles.html
@@ -28,13 +28,8 @@
         --paper-fab-iron-icon: {
           color: var(--secondary-text-color);
         };
-        --paper-menu-button: {
-          margin-top: calc(-36px - var(--content-padding));
-          margin-right: var(--content-padding);
-          float: right;
-          z-index: 1;
-        };
       }
+
       paper-scroll-header-panel {
         @apply(--layout-fit);
         margin: 0;
@@ -47,6 +42,7 @@
           background-color: var(--paper-scroll-header-panel-color, var(--general));
         };
       }
+
       paper-toolbar {
         background-color: transparent;
         color: #FFFFFF;
@@ -54,105 +50,141 @@
           margin-left: 10px;
         };
       }
+
+      .header-action {
+        margin-top: calc(-28px - var(--content-padding));
+        float: right;
+        z-index: 1;
+      }
+
       .fallback-image-wrapper {
         @apply(--layout-horizontal);
         @apply(--layout-center-center);
         @apply(--layout-fit);
       }
+
       .fallback-image {
         width: 140px;
       }
+
       .photo {
         @apply(--img-circle);
         margin-right: var(--content-padding);
         width: 80px;
         height: 80px;
       }
+
       .toolbar-title {
         margin-left: calc(var(--content-padding) - 16px) !important;
       }
+
       .content {
         @apply(--truncate-marked-text-style);
         padding: var(--content-padding);
       }
+
       .main-title {
         margin-bottom: 10px;
         font-size: 24px;
         line-height: 1.1;
         color: var(--primary-text-color);
       }
+
       .metadata-wrapper {
         @apply(--layout-vertical);
         margin-bottom: 10px;
       }
+
       .main-info {
         @apply(--layout-horizontal);
       }
+
       .info {
         @apply(--layout-flex);
         @apply(--layout-vertical);
         @apply(--layout-center-justified);
         color: var(--secondary-text-color);
       }
+
       .meta {
         display: block;
         color: var(--secondary-text-color);
         font-size: 14px;
       }
+
       .meta.highlight {
         color: var(--primary-text-color);
       }
+
       .badges {
         margin-top: -5px;
       }
+
       .badge {
         font-size: 14px;
         color: var(--secondary-text-color);
       }
+
       .badge:not(:last-of-type)::after {
         content: " / ";
       }
+
       .actions {
         @apply(--layout-horizontal);
+        @apply(--layout-wrap);
         margin-left: -9px;
       }
+
       .action {
         color: var(--secondary-text-color);
         text-transform: initial;
       }
+
+      .action iron-icon {
+        margin-right: 8px;
+      }
+
       .block-title {
         margin-bottom: 20px;
         font-size: 20px;
         font-weight: 400;
       }
+
       .sections-wrapper {
         border-top: 1px solid var(--divider-color);
       }
+
       .sections {
         @apply(--layout-horizontal);
         @apply(--layout-wrap);
       }
+
       .section {
         @apply(--layout-horizontal);
       }
+
       .section:not(:last-of-type) {
         margin-bottom: 32px;
       }
+
       .section-info {
         @apply(--layout-flex);
       }
+
       .section-photo {
         @apply(--img-circle);
         margin-right: var(--content-padding);
         width: 60px;
         height: 60px;
       }
+
       .section-title {
         margin-bottom: 5px;
         line-height: 1.2;
         font-size: 17px;
         font-weight: 400;
       }
+
       .section-sub-title {
         margin-bottom: 5px;
         color: var(--secondary-text-color);
@@ -160,21 +192,19 @@
         font-size: 14px;
         font-weight: 400;
       }
+
       .read-more {
         color: inherit !important;
       }
+
       .back-button {
         color: #fff;
       }
+
       @media (min-width: 769px) {
         :host {
           min-height: 60%;
           min-width: 800px;
-          --paper-menu-button: {
-            margin-top: calc(-36px - var(--content-padding));
-            float: right;
-            z-index: 1;
-          }
         }
         .sections {
           margin: 0 -8px -32px;
