--- a/src/styles/shared-styles.html
+++ b/src/styles/shared-styles.html
@@ -15,6 +15,7 @@
         --text-primary-color:       #212121; /* text / icons */
         /* Accent colors */
         --accent-color:             #03A9F4;
+        --disabled-accent-color:    #4dcfff;
         /* Background colors */
         --primary-background-color:   #FFE0B2;
         /* Text colors */
@@ -96,6 +97,9 @@
       }
       [justified] {
         @apply(--layout-justified);
+      }
+      [center-justified] {
+        @apply(--layout-center-justified);
       }
       [self-center] {
         @apply(--layout-self-center);
