Current working files

--- a/src/roe-app.html
+++ b/src/roe-app.html
@@ -103,21 +103,24 @@
       data="{{routeData}}"
       tail="{{subRoute}}"></app-route>
 
-    <app-data
-      app="{{app}}"
-      posts="{{posts}}"></app-data>
-
     <firebase-app
       name="roengineering"
       auth-domain="roengineering-a69c9.firebaseapp.com"
       database-url="https://roengineering-a69c9.firebaseio.com/"
-      api-key="AIzaSyAcDfS3ACojU4rK0R4Qi16_8dO7TqTrcu0"></firebase-app>
+      api-key="AIzaSyAcDfS3ACojU4rK0R4Qi16_8dO7TqTrcu0">
+    </firebase-app>
+
+    <app-data
+      app="{{app}}"
+      posts="{{posts}}"></app-data>
 
     <firebase-auth
       id="auth"
       provider="google"
       app-name="roengineering"
-      user="{{app.user}}"></firebase-auth>
+      user="{{app.user}}"
+      status-known="{{_authStatusKnown}}">
+    </firebase-auth>
 
     <app-drawer-layout id="drawerLayout" drawer-width="599px" force-narrow>
 
@@ -183,6 +186,12 @@
                 user: {}
               };
             }
+          },
+
+          _authStatusKnown: {
+            type: Boolean,
+            value: false,
+            observer: '_autoSignIn'
           },
 
           page: {
@@ -273,11 +282,61 @@
         },
 
         signIn: function () {
-          ROE.Elements.Template.$.auth.signInWithPopup();
+          this.$.auth.signInWithPopup()
+            .then(function (signInObject) {
+              if (navigator.credentials) {
+                var cred = new FederatedCredential({
+                  id: signInObject.user.email,
+                  name: signInObject.user.displayName,
+                  iconURL: signInObject.user.photoURL,
+                  provider: 'https://accounts.google.com'
+                });
+
+                navigator.credentials.store(cred);
+              }
+            });
         },
 
         signOut: function () {
-          this.$.auth.signOut();
+          this.$.auth.signOut()
+            .then(function () {
+              if (navigator.credentials) {
+                navigator.credentials.requireUserMediation();
+              }
+            });
+        },
+
+        _autoSignIn: function (authStatusKnown) {
+          if (navigator.credentials
+            && authStatusKnown
+            && !this.app.user) {
+            return navigator.credentials.get({
+              password: true,
+              federated: {
+                providers: ['https://accounts.google.com']
+              },
+              unmediated: true
+            }).then(function (cred) {
+              if (cred) {
+                this.gSignIn(cred.id);
+              }
+            }.bind(this));
+          }
+        },
+
+        gSignIn: function (id) {
+          return (function () {
+            if (this.app.user && this.app.user.email === id) {
+              return Promise.resolve(this.app.user);
+            }
+
+            var provider = new firebase.auth.GoogleAuthProvider();
+            provider.setCustomParameters({
+              'login_hint': id || ''
+            });
+
+            return this.$.auth.signInWithPopup(provider);
+          }.bind(this))();
         }
 
       });
