--- a/src/pages/blog-page.html
+++ b/src/pages/blog-page.html
@@ -29,8 +29,7 @@
                          attr-for-selected="name"
                          selected-attribute="selected">
 
-      <blog-list id="blogList"
-                 name=""
+      <blog-list name=""
                  app="{{app}}"
                  posts="[[posts]]"></blog-list>
 
@@ -57,13 +56,35 @@
         ],
 
         properties: {
+          app: {
+            type: Object
+          },
+
+          route: {
+            type: Object
+          },
+
+          pageData: {
+            type: Object
+          },
+
           posts: {
             type: Array
+          }
+        },
+
+        observers: [
+          '_routeChanged(pageData.page)'
+        ],
+
+        _routeChanged: function (page) {
+          if (this.app.page === 'blog' && !page) {
+            this.set('pageData.page', '');
           }
         }
 
       });
-      
+
     }());
   </script>
 
